--- a/WSEmision/Views/Coaseguro/Index.cshtml
+++ b/WSEmision/Views/Coaseguro/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model WSEmision.Models.DAL.ViewModels.Coaseguro.ConsultarPolizaViewModel
+﻿@using WSEmision.Models.DAL.DTO.Coaseguro
+@model WSEmision.Models.DAL.ViewModels.Coaseguro.ConsultarPolizaViewModel
 @{
     ViewBag.Title = "Coaseguro";
 
@@ -65,6 +66,27 @@
             </div>
         </div>
     </div>
+    @if (IsPost && ViewBag.IdPv != null) {
+        <div class="col-sm-9">
+            <p>
+                Tipo de Coaseguro:
+                <strong class="text-danger">
+                    @(ViewBag.TipoMovimiento == 3M ? "Líder" : "Seguidor")
+                </strong>
+            </p>
+
+            @Html.Partial("_CedulaParticipacion", ViewBag.CedulaParticipacion as CedulaParticipacionCoaseguroResultSet)
+            @Html.Partial("_AnexoCondiciones", ViewBag.AnexoCondiciones as AnexoCondicionesParticularesCoaseguroResultSet)
+
+            @if (ViewBag.TipoMovimiento == 3M) {
+                <br>
+                <a href="@Url.Action($"descargarCedulaYAnexo/{ViewBag.IdPv}", "coaseguro", new { httproute = "CoaseguroApi" })" class="btn btn-danger">
+                    <span class="fas fa-download"></span>
+                    Descargar Reporte Completo
+                </a>
+            }
+        </div>
+    }
 </div>
 
 @section Styles {
