--- a/WSEmision/Views/Coaseguro/_AnexoCondiciones.cshtml
+++ b/WSEmision/Views/Coaseguro/_AnexoCondiciones.cshtml
@@ -134,5 +134,13 @@
                 </dl>
             </div>
         </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <a href="#" class="btn btn-success btn-sm pull-right">
+                    <span class="fas fa-file-pdf"></span>
+                    Descargar Anexo de Condiciones Particulares
+                </a>
+            </div>
+        </div>
     </div>
 </div>
