--- a/WSEmision/Views/Coaseguro/_CedulaParticipacion.cshtml
+++ b/WSEmision/Views/Coaseguro/_CedulaParticipacion.cshtml
@@ -70,5 +70,13 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <a href="#" class="btn btn-info btn-sm pull-right">
+                    <span class="fas fa-file-pdf"></span>
+                    Descargar Cédula de Participación
+                </a>
+            </div>
+        </div>
     </div>
 </div>
