Servicio Web para la descarga de Carátula de Daños completada. Rutas de LaTeX movidas a [web.config].

--- a/WSEmision/Views/Coaseguro/_Encabezado.cshtml
+++ b/WSEmision/Views/Coaseguro/_Encabezado.cshtml
@@ -1,4 +1,4 @@
-﻿@model WSEmision.Models.DAL.DTO.Coaseguro.EncabezadoReportesEmisionResultSet
+﻿@model WSEmision.Models.DAL.DTO.EncabezadoReportesEmisionResultSet
 
 <div class="panel panel-warning">
     <div class="panel-heading">
