--- a/WSEmision/Views/Coaseguro/Index.cshtml
+++ b/WSEmision/Views/Coaseguro/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using WSEmision.Models.DAL.DTO.Coaseguro
+﻿@using WSEmision.Models.DAL.DTO
+@using WSEmision.Models.DAL.DTO.Coaseguro
 @model WSEmision.Models.DAL.ViewModels.Coaseguro.ConsultarPolizaViewModel
 @{
     ViewBag.Title = "Coaseguro";
